<resources>
    <string name="app_name">Java1_wk4</string>
    <string name="action_settings">Settings</string>
    <string name="error_title">Oops! Sorry!</string>
    <string name="error_message">There was an error. Please try again.</string>
    <string name="error_ok_button_text">OK</string>
    <string name="network_unavailable_message">Network is unavailable!</string>
    <string name="crntDegrees">100</string>
    <string name="crnt_wthr">Current</string>
    <string name="precip">ChancePrecip</string>
    <string name="precip_perc">50%</string>
    <string name="tmrw_wthr">Mostly Cloudy with a slight chance of rain.</string>
    <string name="lon">Longitude</string>
    <string name="lat">Latitude</string>
    <string name="CurrentTempHeader">Current Temperature</string>
    <string name="no_network">Can\'t find network!</string>
    <string name="TomorrowsForecast">Tomorrow\'s Forecast</string>
    <string name="O">O</string>
    <string name="refreshButton">RefreshButton</string>

</resources>
