
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/mountain">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/CurrentTempHeader"
        android:id="@+id/CurrentTemp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="71dp"
        android:textColor="#2196F3"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/precip"
        android:id="@+id/Precip"
        android:layout_below="@+id/CurrentDegree"
        android:layout_alignParentStart="true"
        android:textColor="#ffffff"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/O"
        android:id="@+id/O_degree"
        android:textStyle="bold"
        android:layout_alignTop="@+id/CurrentDegree"
        android:layout_toEndOf="@+id/CurrentDegree"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:textColor="#ffffff"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:background="#51000000"/>

    <EditText
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/Latitude"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:hint="@string/lat"
        android:textColorHint="#cccccc"
        android:textColor="#ffffff"
        android:layout_marginEnd="10dp"/>

    <EditText
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/Longitude"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/CurrentTemp"
        android:hint="@string/lon"
        android:textColorHint="#cccccc"
        android:textColor="#ffffff"
        android:layout_marginStart="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="--"
        android:id="@+id/CurrentDegree"
        android:layout_below="@+id/CurrentTemp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textColor="#ffffff"
        android:textSize="50sp"
        android:gravity="center"
        android:backgroundTintMode="screen"
        android:backgroundTint="#000000"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="--"
        android:id="@+id/PrecipPercent"
        android:layout_below="@+id/Precip"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:layout_alignEnd="@+id/Precip"
        android:textStyle="bold"
        android:textColor="#ffffff"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="--"
        android:id="@+id/CurrentWeather"
        android:layout_alignParentEnd="true"
        android:textStyle="bold"
        android:layout_alignBottom="@+id/PrecipPercent"
        android:textAlignment="viewEnd"
        android:layout_below="@+id/CurrentDegree"
        android:textColor="#ffffff"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/refresh_btn"
        android:background="@drawable/refresh_btn"
        android:contentDescription="@string/refreshButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_above="@+id/refresh_btn"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>
